
[package]
name = "function"
version = "0.1.0"
edition = "2018"

[dependencies]
# Func dependencies
cloudevents-sdk = { version = "0.4", features = ["actix"] }
actix-web = "3"
actix-rt = "1"
serde_json = "1"
log = "0.4.0"
env_logger = "0.7.1"

# Project dependencies
envconfig = "0.9"
influxdb = { version = "0.3", features = ["derive", "use-serde"] }
snafu = "0.6"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
jsonpath_lib = "0.2.6"
chrono = "0.4"